`version_compare` is replaced by `version` : https://docs.ansible.com/ansible/latest/user_guide/playbooks_tests.html#version-comparison

--- a/tasks/api.yml
+++ b/tasks/api.yml
@@ -3,7 +3,7 @@
 - debug: msg="Kong Version - {{ kong_version }}"
 
 - debug: msg="WARNING - api object deprecated in v0.13.0. Use route and service objects"
-  when: kong_version is version_compare('0.13', '>=')
+  when: kong_version is version('0.13', '>=')
 
 - name: Verify kong admin api available
   uri: url="{{ kong_admin_api_url|default('http://localhost:8001') }}"
