--- a/tasks/service.yml
+++ b/tasks/service.yml
@@ -4,7 +4,7 @@
 
 - name: Check kong version
   fail: msg="Service object requires v0.13+"
-  when: kong_version is version_compare('0.13', '<')
+  when: kong_version is version('0.13', '<')
 
 - name: Verify kong admin api available
   uri: url="{{ kong_admin_api_url|default('http://localhost:8001') }}"
